# OCR.Scanner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  batch_demo.py  docker-compose.yml  migrate.py  ocr-scanner.py  pyproject.toml  readme.md  requirements.txt  setup.py  setup_dev.py
docker/: README.md
examples/: basic_usage.py  batch_processing_example.py
src/ocr_scanner/: __init__.py  main.py
src/ocr_scanner/config/: __init__.py  settings.py
src/ocr_scanner/core/: __init__.py  batch_processor.py  image_processor.py
src/ocr_scanner/gui/: __init__.py  batch_processing_tab.py  main_window.py  single_image_tab.py  text_editor_dialog.py
src/ocr_scanner/plugins/: __init__.py  base_plugin.py  plugin_manager.py
src/ocr_scanner/plugins/builtin/: __init__.py  enhance_contrast.py  morphological_ops.py
src/ocr_scanner/utils/: __init__.py  export.py  image_utils.py
tests/: __init__.py  test_batch_processor.py  test_image_processor.py
